mobile slight fixes

--- a/src/pages/Xlist.css
+++ b/src/pages/Xlist.css
@@ -167,3 +167,13 @@ td {
   .small-header {
     white-space: nowrap; /* Prevent text wrapping */
   }
+
+  @media (max-width: 650px) {
+    .search {
+      width: 90%; /* Increase width to 80% */
+    }
+  
+    .searchInputs {
+      width: 90%; /* Increase width to 90% */
+    }
+  }
