--- a/src/pages/BTCAzukiSearch.css
+++ b/src/pages/BTCAzukiSearch.css
@@ -2,39 +2,41 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 20px;
-  }
-  
-  .marketplace-item {
+}
+
+.marketplace-item {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-  }
-  
-  .marketplace-item img {
+    transform: scale(1.5);
+    /* Increase the size of the search result image */
+}
+
+.marketplace-item img {
     width: 200px;
     height: auto;
-  }
-  
-  .marketplace-item p {
-    margin-top: 10px;
-  }
+}
 
-  .no-result {
+.marketplace-item p {
+    margin-top: 10px;
+}
+
+.no-result {
     margin-top: 1em;
-  }
-  
-  .loading {
+}
+
+.loading {
     /* Your styles for the loading class */
     text-align: center;
-  }
-  
-  .num-inscriptions {
+}
+
+.num-inscriptions {
     /* Your styles for the num-inscriptions class */
     text-align: center;
-  }
+}
 
-  .search-results {
+.search-results {
     text-align: center;
-  }
+}
