--- a/src/pages/Xlist.css
+++ b/src/pages/Xlist.css
@@ -203,8 +203,6 @@ h1 {
 .searchInputs {
   display: flex;
   align-items: center;
-  padding-top: 7px;
-  padding-bottom: 7px;
   padding-left: 7px;
   padding-right: -5px;
   border: none;
@@ -216,6 +214,7 @@ h1 {
   font-family: inherit;
   font-size: 16px;
   width: 100%;
+  height: 30px;
   /* This allows the search input to take full width of its parent container */
 }
 
@@ -256,13 +255,8 @@ input.searchInputs[type="text"] {
 
 /* changes search bar to cover most of the screen if screen width is <= 650px */
 @media (max-width: 650px) {
-  .search {
-    width: 85%;
-    /* Increase width to 80% */
-  }
 
-  .searchInputs {
-    width: 85%;
-    /* Increase width to 90% */
-  }
+.progress-search-container {
+  width: 95%;
+}
 }
